@@ -2666,6 +2666,8 @@ namespace libtorrent
 			return;
 		}
 
+		t->schedule_storage_tick();
+
 		// in case the outstanding bytes just dropped down
 		// to allow to receive more data
 		setup_receive(read_async);
